--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="table">Table layout</string>
     <string name="constraint">Constraint layout</string>
     <string name="flex">Flex layout</string>
+    <string name="grid">Grid layout</string>
 </resources>
